# hermes-stepfun-imagegen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/hermes-stepfun-imagegen/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: hermes-stepfun-imagegen-instincts.yaml
.claude/skills/hermes-stepfun-imagegen/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: ci.yml
src/hermes_stepfun_imagegen/: __init__.py  plugin.yaml  setup.py
src/hermes_stepfun_imagegen/chain/: __init__.py  plugin.yaml
tests/: conftest.py  test_setup.py  test_stepfun.py
